--- a/src/components/LoadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/LoadMoreBtn/LoadMoreBtn.module.css
@@ -16,12 +16,15 @@
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button:hover {
-  border: 2px #fff;
-}
+.button:hover,
 .button:focus {
   background: #6d554b;
   border: none;
+}
+
+.button:active {
+  background: #9b6c43;
+  border: 2px solid white;
 }
 @media only screen and (min-width: 768px) {
   .button {
