--- a/src/components/RecipesList/RecipesList.module.css
+++ b/src/components/RecipesList/RecipesList.module.css
@@ -1,10 +1,40 @@
+ .recipeListContainer {
+    padding: 48px 16px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 16px;
+  }
+   .FormRecipes {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 16px;
+    user-select: none;
+  }
+  .Recipes {
+   font-weight: 600;
+font-size: 32px;
+color: #000;
+  }
+.recipeslist {
+   display: flex;
+flex-wrap: wrap;
+align-items: center;
+justify-content: flex-start;
+flex-direction: row;
+gap: 24px;
+  }
+
+
+
 @media only screen and (min-width: 768px) {
 }
 
 @media only screen and (min-width: 1280px) {
   .recipeListContainer {
-    padding: 48px 107px;
-    max-width: 1440px;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
