--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,3 +1,4 @@
+/* Mobile First: 393px+ */
 .hero {
   background-color: #3d2218;
   background-image: linear-gradient(
@@ -9,7 +10,7 @@
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
-  padding: 128px 32px;
+  padding: 64px 0;
 }
 
 @media (min-resolution: 192dpi) {
@@ -23,16 +24,50 @@
   }
 }
 
-.container {
+/* Контейнер */
+.heroContainer {
   max-width: 1440px;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
+/* Внутрішній контент */
+.content {
+  max-width: 700px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+/* Заголовок */
 .title {
   color: #fff;
-  font-size: 48px;
+  font-size: 40px;
   font-weight: 600;
-  line-height: 110%;
+  line-height: 1.2;
   margin-bottom: 24px;
   text-align: left;
+}
+
+/* Tablet 768px+ */
+@media screen and (min-width: 768px) {
+  .hero {
+    padding: 96px 0;
+  }
+
+  .heroContainer {
+    padding: 0 32px;
+  }
+}
+
+/* Desktop 1280px+ */
+@media screen and (min-width: 1440px) {
+  .hero {
+    padding: 128px 0;
+    padding: 128px 108px;
+  }
+
+  .heroContainer {
+    padding: 0 108px;
+  }
 }
