--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -50,10 +50,20 @@
   border: 1px solid #d9d9d9;
   border-radius: 8px;
   font-size: 14px;
+
+  width: 100%;
+  padding: 12px 40px 12px 16px;
 }
 
 .input::placeholder {
   color: #9f9f9f;
+}
+
+.visuallyHiddenCheckbox {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
 
 .checkboxWrapper {
@@ -61,21 +71,40 @@
   align-items: baseline;
   gap: 8px;
   font-size: 13px;
-  margin-top: 8px;
+  margin-top: 15px;
   margin-bottom: 12px;
   text-align: left;
 }
 
-.checkbox {
-  margin-top: 4px;
+.customCheckbox {
+  width: 16px;
+  height: 16px;
+  border: 1.5px solid #595d62;
+  border-radius: 4px;
+  display: inline-block;
+  position: relative;
+  margin-right: 8px;
   flex-shrink: 0;
 }
 
-.checkboxLabel {
-  margin-top: 4px;
-  font-size: 12px;
-  font-weight: 400;
-  color: #444;
+.visuallyHiddenCheckbox:checked + .customCheckbox::after {
+  content: "";
+  position: absolute;
+  left: 4px;
+  top: 0px;
+  width: 5px;
+  height: 10px;
+  border: solid #2e2e2e;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+
+.customCheckboxLabel {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: #2e2e2e;
+  cursor: pointer;
 }
 
 .error {
@@ -117,6 +146,28 @@
 
 .registerLink:hover {
   text-decoration: underline;
+}
+
+.passwordFieldWrapper {
+  position: relative;
+}
+
+.inputWithIcon {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.iconButton {
+  position: absolute;
+  right: 5px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 768px) {
