--- a/src/components/RecipeCard/RecipeCard.module.css
+++ b/src/components/RecipeCard/RecipeCard.module.css
@@ -87,8 +87,6 @@ height: 230px;
   flex-direction: row;
   gap: 8px;
   width: 100%;
-          margin-top: auto;
-
 }
 
 .learnMoreButton {
@@ -145,7 +143,7 @@ height: 230px;
   font-size: 24px;
   color: #000;
   margin-right: auto;
-          margin-top: auto;
+  margin-bottom: auto;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
