--- a/src/index.css
+++ b/src/index.css
@@ -2,42 +2,18 @@ body {
   color: #444444;
   font-family: 'Montserrat', sans-serif;
   background-color: var(--background);
+  margin: 0 auto;
+  padding: 0;
 }
 
-/* h1,
+h1,
 h2,
 h3,
 h4,
-h5,
-p {
-  margin: 0;
+h5 {
+  color: var(--white);
 }
 
-p:last-child {
-  margin-bottom: 0;
-}
-
-ul,
-ol {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-a {
-  color: currentColor;
-  text-decoration: none;
-}
-
-button {
-  cursor: pointer;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-} */
 :root {
   --black: #000000;
   --gray: #595d62;
