--- a/src/components/RecipesList/RecipesList.module.css
+++ b/src/components/RecipesList/RecipesList.module.css
@@ -1,34 +1,37 @@
- .recipeListContainer {
-    padding: 48px 16px;
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: column;
-    gap: 16px;
-  }
-   .FormRecipes {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: column;
-    gap: 16px;
-    user-select: none;
-  }
-  .Recipes {
-   font-weight: 600;
-font-size: 32px;
-color: #000;
-  }
+.RecipesList {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 16px;
+}
+.recipeListContainer {
+  padding: 0px 16px;
+  width: 393px;
+  height: 6102px;
+}
+.FormRecipes {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 16px;
+  width: 361px;
+  height: 39px;
+}
+.Recipes {
+  font-weight: 600;
+  font-size: 32px;
+  color: #000;
+}
 .recipeslist {
-   display: flex;
-flex-wrap: wrap;
-align-items: center;
-justify-content: flex-start;
-flex-direction: row;
-gap: 24px;
-  }
-
-
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 24px;
+}
 
 @media only screen and (min-width: 768px) {
 }
@@ -55,7 +58,7 @@ gap: 24px;
     font-size: 40px;
     color: #000;
   }
-  
+
   .recipeslist {
     display: flex;
     flex-wrap: wrap;
