--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,19 @@
 body {
   color: #444444;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-color: var(--background);
   margin: 0 auto;
   padding: 0;
 }
 
+p,
 h1,
 h2,
 h3,
 h4,
 h5 {
-  color: var(--white);
+  /* color: var(--white); */
+  margin: 0;
 }
 
 :root {
