--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,9 +1,14 @@
-.container {
+.layout {
+  min-height: 100vh;
   display: flex;
+  flex-direction: column;
+}
+.container {
+  /* display: flex;
   flex-direction: column;
   min-height: 100vh;
   max-width: 100%;
-  margin: 0 auto;
+  margin: 0 auto; */
 }
 
 .main {
