--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,9 +1,22 @@
-.title{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 100px;
-	font-size: 50px;
-	font-weight: 500;
-	color: whitesmoke;
+.container {
+  min-width: 320px;
+  max-width: 375px;
+  margin: 0 auto;
+  padding: 48px 16px 24px;
+}
+
+/* Styles for Tablet devices */
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 48px 32px;
+  }
+}
+
+/* Styles for Desktop devices */
+@media only screen and (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
+    padding: 48px 108px;
+  }
 }
