--- a/src/components/AddRecipeForm/AddRecipeForm.module.css
+++ b/src/components/AddRecipeForm/AddRecipeForm.module.css
@@ -171,6 +171,11 @@
     margin-top: 40px;
 }
 
+.error {
+    color: #ff4d4d;
+    font-size: 12px;
+}
+
 @media screen and (min-width: 768px) {
     .title {
         font-size: 32px;
