--- a/src/components/LoadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/LoadMoreBtn/LoadMoreBtn.module.css
@@ -1,14 +1,14 @@
 .button {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   border-radius: 8px;
   border: none;
   width: 289px;
   height: 54px;
   background: #9b6c43;
-  padding: 0px;
+  padding: 0;
   display: block;
   margin: 0 auto;
-  margin-top: auto;
+  margin-top: 24px;
   transition: background 0.3s ease;
   font-weight: 600;
   font-size: 18px;
