--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -51,7 +51,7 @@
 
   .searchInput {
     flex: 1;
-    padding: 16px 24px;
+    /* padding: 16px 24px; */
     font-size: 18px;
     border-radius: 16px;
   }
