--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -4,7 +4,9 @@
   margin: 0 auto;
   padding: 48px 16px 24px;
 }
-
+.title {
+  margin-bottom: 16px;
+}
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
   .container {
