--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -4,14 +4,5 @@
   flex-direction: column;
 }
 .container {
-  /* display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  max-width: 100%;
-  margin: 0 auto; */
-}
-
-.main {
-  flex: 1;
-  /* padding: 16px; */
+  flex-grow: 1;
 }
