--- a/src/components/ProfileNavigation/ProfileNavigation.module.css
+++ b/src/components/ProfileNavigation/ProfileNavigation.module.css
@@ -27,7 +27,7 @@
   bottom: 0;
   width: 0;
   height: 2px;
-  background-color: #fff;
+  background-color: #0d0d0d;
   transition: width 0.3s ease;
   border-radius: 1px;
 }
