--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -1,10 +1,31 @@
-.profilePage {
-  max-width: 1440px;
-  padding: 48px 107px;
+.container {
+  min-width: 320px;
+  max-width: 393px;
   margin: 0 auto;
+  padding: 48px 16px 24px;
 }
 
 .title {
   font-size: 40px;
   margin-bottom: 16px;
+}
+.totalRecipes {
+  font-weight: 600;
+  font-size: 18px;
+  color: #000;
+}
+/* Styles for Tablet devices */
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 48px 32px;
+  }
+}
+
+/* Styles for Desktop devices */
+@media only screen and (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
+    padding: 48px 108px;
+  }
 }
