--- a/src/components/AuthPromptModal/AuthPromptModal.module.css
+++ b/src/components/AuthPromptModal/AuthPromptModal.module.css
@@ -9,11 +9,11 @@
 }
 
 .modal {
-  background-color: #fdfcdf;
-  padding: 40px 32px;
-  border-radius: 24px;
+  background-color: #faf3e0;
+  padding: 56px 32px;
+  border-radius: 32px;
   position: relative;
-  width: 335px;
+  width: 420px;
   text-align: center;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
 }
@@ -42,7 +42,7 @@
 }
 
 .title {
-  font-size: 24px;
+  font-size: 32px;
   font-weight: 600;
   margin-bottom: 8px;
   color: #000;
@@ -61,12 +61,11 @@
   gap: 14px;
   flex-wrap: wrap;
 }
-
 .loginBtn,
 .registerBtn {
-  padding: 12px 24px;
+  padding: 8px 45px;
   border-radius: 12px;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 16px;
   transition: background-color 0.3s ease, color 0.3s ease, border 0.3s ease;
   cursor: pointer;
