--- a/src/components/AuthPromptModal/AuthPromptModal.module.css
+++ b/src/components/AuthPromptModal/AuthPromptModal.module.css
@@ -49,10 +49,13 @@
 }
 
 .text {
-  font-size: 16px;
-  color: #000;
-  margin-bottom: 32px;
-  line-height: 1.4;
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.7);
+  margin-bottom: 40px;
+  line-height: 1.5;
+  max-width: 360px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .buttons {
