--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -9,7 +9,7 @@
 .card {
   background-color: #faf3e0;
   border-radius: 32px;
-  padding: 48px 32px;
+  padding: 40px 32px;
   width: 420px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -17,7 +17,7 @@
 
 .title {
   font-size: 32px;
-  margin-bottom: 24px;
+  margin-bottom: 18px;
   color: #2e2e2e;
   font-weight: 600;
 }
@@ -30,19 +30,38 @@
 
 .label {
   text-align: left;
-  margin: 12px 0 6px;
+  margin-bottom: 6px;
   font-size: 14px;
   color: #2e2e2e;
 }
 
 .input {
-  padding: 12px 16px;
   border: 1px solid #d9d9d9;
   border-radius: 8px;
   font-size: 14px;
-  margin-bottom: 4px;
   width: 100%;
-  padding: 12px 40px 12px 16px;
+  padding: 10px 16px;
+  background-color: #fff;
+  margin-bottom: 12px;
+}
+
+.inputSpacing {
+  margin-bottom: 25px;
+}
+
+.input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 155%;
+  color: #9f9f9f;
+}
+
+.input:hover {
+  border: 1px solid #9b6c43;
+}
+
+.input:focus {
+  border: 1px solid #9b6c43;
 }
 
 .error {
@@ -60,28 +79,40 @@
   border-radius: 8px;
   font-size: 16px;
   cursor: pointer;
-  margin-top: 20px;
   transition: background-color 0.3s;
+  height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 19px;
 }
 
 .button:hover {
   background-color: #563c29;
 }
 
+.button:focus {
+  background-color: #563c29;
+}
+
 .registerText {
   font-size: 14px;
-  margin-top: 16px;
 }
 
 .registerLink {
   font-weight: 600;
   text-decoration: none;
   margin-left: 4px;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
 }
 
 .registerLink:hover {
-  text-decoration: underline;
-  text-decoration-skip-ink: none;
+  color: #9b6c43;
+}
+
+.registerLink:focus {
+  color: #9b6c43;
 }
 
 .passwordFieldWrapper {
@@ -96,11 +127,13 @@
 
 .iconButton {
   position: absolute;
-  right: 5px;
+  right: 8px;
+  top: 35%;
+  transform: translateY(-50%);
   background: none;
   border: none;
   cursor: pointer;
-  padding: 4px;
+  padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
