--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -42,21 +42,32 @@
   font-weight: 400;
   font-size: 12px;
   color: #333;
-  margin: 12px 0 6px;
+  margin-top: 12px;
 }
 
 .input {
-  padding: 8px;
   border: 1px solid #d9d9d9;
   border-radius: 8px;
   font-size: 14px;
-
   width: 100%;
-  padding: 12px 40px 12px 16px;
+  padding: 12px 10px;
+
+  background-color: #fff;
 }
 
 .input::placeholder {
   color: #9f9f9f;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 155%;
+}
+
+.input:hover {
+  border: 1px solid #9b6c43;
+}
+
+.input:focus {
+  border: 1px solid #9b6c43;
 }
 
 .visuallyHiddenCheckbox {
@@ -71,8 +82,6 @@
   align-items: baseline;
   gap: 8px;
   font-size: 13px;
-  margin-top: 15px;
-  margin-bottom: 12px;
   text-align: left;
 }
 
@@ -85,6 +94,10 @@
   position: relative;
   margin-right: 8px;
   flex-shrink: 0;
+}
+
+.customCheckbox:hover {
+  border-color: #9b6c43;
 }
 
 .visuallyHiddenCheckbox:checked + .customCheckbox::after {
@@ -102,16 +115,21 @@
 .customCheckboxLabel {
   display: flex;
   align-items: center;
-  font-size: 14px;
+  font-size: 12px;
+  font-weight: 400;
   color: #2e2e2e;
   cursor: pointer;
+  margin-top: 12px;
+}
+
+.customCheckboxLabel:hover {
+  color: #9b6c43;
 }
 
 .error {
   color: #d32f2f;
   font-size: 12px;
   text-align: left;
-  margin: 2px 0 8px;
 }
 
 .button {
@@ -122,11 +140,21 @@
   border-radius: 8px;
   font-size: 16px;
   cursor: pointer;
-  margin-top: 12px;
   transition: background-color 0.3s;
+
+  height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 19px;
+  margin-top: 28px;
 }
 
 .button:hover {
+  background-color: #563c29;
+}
+
+.button:focus {
   background-color: #563c29;
 }
 
@@ -135,17 +163,21 @@
   font-size: 16px;
   line-height: 155%;
   text-align: center;
-  margin-top: 16px;
   color: #444;
 }
 
 .registerLink {
   font-weight: 600;
-  text-decoration: none;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
 }
 
 .registerLink:hover {
-  text-decoration: underline;
+  color: #9b6c43;
+}
+
+.registerLink:focus {
+  color: #9b6c43;
 }
 
 .passwordFieldWrapper {
@@ -160,11 +192,13 @@
 
 .iconButton {
   position: absolute;
-  right: 5px;
+  right: 8px;
+  top: 50%;
+  transform: translateY(-50%);
   background: none;
   border: none;
   cursor: pointer;
-  padding: 4px;
+  padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
