--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -13,6 +13,7 @@
   font-weight: 600;
   font-size: 18px;
   color: #000;
+  margin-bottom: 24px;
 }
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
