--- a/src/components/AddRecipeForm/AddRecipeForm.module.css
+++ b/src/components/AddRecipeForm/AddRecipeForm.module.css
@@ -22,6 +22,10 @@
     overflow: hidden;
 }
 
+.img_recipe:hover {
+    box-shadow: 0 0 20px 0 rgba(155, 108, 67, 0.3);
+}
+
 .cont_img {
     margin-bottom: 24px;
 }
@@ -48,11 +52,24 @@
     border: 1px solid #d9d9d9;
     border-radius: 8px;
     padding: 12px;
+    height: 53px;
     margin-top: 8px;
     font-weight: 400;
     font-size: 18px;
     color: #000;
+    transition: border 400ms cubic-bezier(0.25, 0.8, 0.25, 1);
 }
+
+.field:hover, .field:focus {
+    border: 1.50px solid #9b6c43;
+}
+
+.field_textarea:hover, .field_textarea:focus {
+    border: 1.50px solid #9b6c43;
+}
+
+.field.error {
+    border: 1.5px solid #c80000; }
 
 .field_textarea {
     display: block;
@@ -67,6 +84,7 @@
     height: 144px;
     resize: none;
     overflow-y: auto;
+    transition: border 400ms cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 .cal_cat {
@@ -84,6 +102,11 @@
     text-align: center;
     color: #000;
     margin-bottom: 16px;
+    transition: background-color 400ms cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.btn_remove:hover, .btn_remove:focus {
+    background-color: #d9d9d9;
 }
 
 .btn_add {
@@ -97,6 +120,12 @@
     text-align: center;
     color: #fff;
     margin-bottom: 32px;
+    transition: background-color 400ms cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.btn_add:hover,
+.btn_add:focus {
+    background-color: #6d554b;
 }
 
 .cont_ing {
@@ -169,6 +198,11 @@
     text-align: center;
     color: #fff;
     margin-top: 40px;
+    transition: background-color 400ms cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.btn_submit:hover, .btn_submit:focus {
+    background-color: #6d554b;
 }
 
 .error {
