--- a/src/pages/AddRecipePage/AddRecipePage.module.css
+++ b/src/pages/AddRecipePage/AddRecipePage.module.css
@@ -22,6 +22,7 @@
     .title {
         font-size: 48px;
         line-height: 1.1;
+
     } 
 }
 
@@ -30,4 +31,9 @@
         max-width: 1440px;
         padding: 48px 107px;
     }
+
+    .title {
+        margin-bottom: 40px;
+        
+    } 
 }
