--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -10,7 +10,7 @@
   background-color: #faf3e0;
   border-radius: 32px;
   padding: 40px 32px;
-  width: 420px;
+  width: 522px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
@@ -30,9 +30,9 @@
 
 .label {
   text-align: left;
-  margin-bottom: 6px;
   font-size: 14px;
   color: #2e2e2e;
+  margin-top: 12px;
 }
 
 .input {
@@ -42,11 +42,7 @@
   width: 100%;
   padding: 10px 16px;
   background-color: #fff;
-  margin-bottom: 12px;
-}
-
-.inputSpacing {
-  margin-bottom: 25px;
+  margin-top: 6px;
 }
 
 .input::placeholder {
@@ -85,6 +81,7 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 19px;
+  margin-top: 25px;
 }
 
 .button:hover {
@@ -128,7 +125,7 @@
 .iconButton {
   position: absolute;
   right: 8px;
-  top: 35%;
+  top: 55%;
   transform: translateY(-50%);
   background: none;
   border: none;
@@ -137,12 +134,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-@media (max-width: 768px) {
-  .card {
-    width: 522px;
-  }
 }
 
 @media (max-width: 393px) {
