--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -10,7 +10,7 @@
   background-color: #faf3e0;
   border-radius: 32px;
   padding: 48px 32px;
-
+  width: 522px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
@@ -204,7 +204,7 @@
   justify-content: center;
 }
 
-@media (max-width: 393px) {
+@media (max-width: 768px) {
   .card {
     width: 362px;
   }
