--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -13,7 +13,7 @@
   min-width: 36px;
   font-size: 14px;
   background-color: white;
-  border: 1px solid #000000;
+  border: none;
   border-radius: 8px;
   cursor: pointer;
   transition: all 0.2s ease;
@@ -57,4 +57,20 @@
   background-color: transparent;
   color: #333;
   cursor: default;
+}
+.logoIcon {
+  display: inline-block;
+  width: 16px;
+  height: 10px;
+  fill: none;
+  stroke-width: 1px;
+  background-color: #9b6c43;
+}
+
+.button:hover:not(:disabled) .logoIcon {
+  filter: invert(0);
+}
+.arrow {
+  background-color: #9b6c43;
+  border: none;
 }
